--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 	
 	<head> 
 	<head> 
-	<link rel="icon" href="C:\Users\ASUS\Desktop\123.jpg" sizes="16x16"> 
+	<link rel="icon" href="123.jpg" sizes="16x16"> 
 	<meta charset="utf-8" /> 
-	<title></title> 
+	<title>主页</title> 
 	<style type="text/css"> 
 	span{ 
 	display: flex; 
