--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 	<head> 
 	<link rel="icon" href="123.jpg" sizes="16x16"> 
 	<meta charset="utf-8" /> 
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 	<title>主页</title> 
 	<style type="text/css"> 
 	span{ 
