--- a/yybfq.html
+++ b/yybfq.html
@@ -9,7 +9,7 @@
 <title>音乐播放器</title>
 <link rel="icon" href="1.ico" >
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 <link rel="stylesheet" href="fonts/iconfont.css">
 <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css" />
 <link rel="stylesheet" type="text/css" media="screen" href="css/player.css" />
