--- a/yybfq.html
+++ b/yybfq.html
@@ -8,10 +8,7 @@
   <meta name="Description" content="">
 <title>音乐播放器</title>
 <link rel="icon" href="1.ico" >
-<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="HandheldFriendly" content="True">
-		<meta name="MobileOptimized" content="320">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="fonts/iconfont.css">
 <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css" />
 <link rel="stylesheet" type="text/css" media="screen" href="css/player.css" />
