--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		　 <script LANGUAGE="javascript"> 
+		<!--　 <script LANGUAGE="javascript"> 
 			
 			
 			　 function loopy(){ 
@@ -17,7 +17,7 @@
 			　 loopy() 
 			
 			
-			　 </script> 
+			　 </script> -->
 		<link rel="icon" href="123.jpg" sizes="16x16">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=0.5">
