--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<style>
 			html, body{height:100%; width:100%; margin:10; padding:10;} body {line-height:1.5;
 			font-family: XHei Intel; background:-webkit-gradient(linear, left top,
-			left bottom, from(#7db5e996), to(#16cae2));
+			left bottom, from(#7db5e996), to(#7db5e996));
             background-attachment: fixed;}/*大背景颜色*/ 
 			.nav {border:solid
 			1px #293C5A; margin-bottom:20px; border-radius: 5px; background-color:#70F3FF;}/*框内大背景颜色*/
