--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
 		<address>
 		</address>
 		<div id="footer">
-			<!--<img src="https://v1.jinrishici.com/all.svg">-->
+			<img src="https://v1.jinrishici.com/all.svg">
 		</div>
 	</body>
 </html>
