--- a/2048.html
+++ b/2048.html
@@ -1,6 +1,9 @@
 
 <!DOCTYPE html>
 <html>
+<body style="overflow:hidden">
+
+    <!-- TODO: -->
 
 <link rel="stylesheet" href="css/2048reset.min.css">
 
@@ -71,4 +74,5 @@
 </div>
 
 <script src="js/2048.js"></script>
+</body>
 </html>
