--- a/index.html
+++ b/index.html
@@ -446,6 +446,11 @@
 						我的音乐
 					</abbr>
 				</a>
+<a href="2048.html" target="_blank">
+					<abbr title="2048.html" style="text-decoration:none">
+						2048
+					</abbr>
+				</a>
 				<div class="clear">
 				</div>
 			</div>
