--- a/2048.html
+++ b/2048.html
@@ -1,6 +1,7 @@
 
 <!DOCTYPE html>
 <html>
+<meta name="viewport" content="width=device-width, initial-scale=0.8">
 <body style="overflow:hidden">
 
     <!-- TODO: -->
