--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -51,7 +52,7 @@
 			</center>
 			
 		</div>
-
+		<!-- <img src="https://api.sunweihu.com/api/bing1/api.php" width="600px"/> -->
 		<!-- 走马灯 -->
 		<marquee>
 			<img src="https://v1.jinrishici.com/all.svg">
@@ -350,9 +351,14 @@
 				<div class="clear">
 				</div>
 			</div>
+			<center>
 			
-			<!-- <iframe src="http://www.ipip5.com/today/api.php?type=txt" id="iframepage" onload="changeFrameHeight()" frameborder=1 height="400px" scrolling="no"  style=" overflow-x:scroll; overflow-y:hidden" ></iframe>
-			<script>
+			<img src="https://api.sunweihu.com/api/bing1/api.php" height="300px"/>
+			
+			<iframe src="http://www.ipip5.com/today/api.php?type=txt" id="iframepage" frameborder=1 height="300px" scrolling="yes"  style=" overflow-x:scroll; overflow-y:hidden" ></iframe>
+				
+			</center>	
+			<!-- <script>
 				function changeFrameHeight(){
 					var ifm= document.getElementById("iframepage"); 
 					ifm.height=document.documentElement.clientHeight;
