--- a/index.html
+++ b/index.html
@@ -396,6 +396,7 @@
 		</div>
 		<script src="js/weather.js"></script>
 		<script src="js/timeclock.js"></script>
+<script>  $("iframe").attr("src","index.html")</script>
 	</body>
 </html>
 
