--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 			
 			<img src="https://api.sunweihu.com/api/bing1/api.php" height="300px"/>
 			
-			<iframe src="http://www.ipip5.com/today/api.php?type=txt" id="iframepage" frameborder=1 height="300px" scrolling="yes"  style=" overflow-x:scroll; overflow-y:hidden" ></iframe>
+			<iframe src="https://www.ipip5.com/today/api.php?type=txt" id="iframepage" frameborder=1 height="300px" scrolling="yes"  style=" overflow-x:scroll; overflow-y:hidden" ></iframe>
 				
 			</center>	
 			<!-- <script>
@@ -396,7 +396,6 @@
 		</div>
 		<script src="js/weather.js"></script>
 		<script src="js/timeclock.js"></script>
-<script>  $("iframe").attr("src","index.html")</script>
 	</body>
 </html>
 
