--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 	<head>
@@ -38,7 +37,7 @@
 				<!-- 天气的实现 -->
 				<div class="weather" style="float: right;"> 
                 <iframe width="455" scrolling="no" height="75" frameborder="0" allowtransparency="true" onload="reinitIframe()"
-                src="https://i.tianqi.com/index.php?c=code&amp;id=38&amp;icon=1&amp;num=2&amp;align=left"></iframe>
+                src="http://i.tianqi.com/index.php?c=code&amp;id=38&amp;icon=1&amp;num=2&amp;align=left"></iframe>
 				
                 </div>
 			</div>
@@ -355,27 +354,10 @@
 			
 			<img src="https://api.sunweihu.com/api/bing1/api.php" height="300px"/>
 			
-			<iframe src="https://www.ipip5.com/today/api.php?type=txt" id="iframepage" frameborder=1 height="300px" scrolling="yes"  style=" overflow-x:scroll; overflow-y:hidden" ></iframe>
+			<iframe src="https://www.ipip5.com/today/" id="iframepage" frameborder=1 height="300px" scrolling="yes"  style=" overflow-x:scroll; overflow-y:hidden " ></iframe>
 				
 			</center>	
-			<!-- <script>
-				function changeFrameHeight(){
-					var ifm= document.getElementById("iframepage"); 
-					ifm.height=document.documentElement.clientHeight;
-
-				}
-
-				window.onresize=function(){  
-					changeFrameHeight();  
-
-				} 
-			</script> -->
 			
-			<!-- 
-			<script type="text/javascript" language="javascript">
-				var ifm= document.getElementById("myiframe");
-				ifm.height=document.documentElement.scrollHeight;
-			</script> -->
 		</div>
 		<address>
 		</address>
@@ -394,6 +376,8 @@
 			});
 			</script>
 		</div>
+		
+		
 		<script src="js/weather.js"></script>
 		<script src="js/timeclock.js"></script>
 	</body>
