--- a/index.html
+++ b/index.html
@@ -347,6 +347,11 @@
 						2048
 					</abbr>
 				</a>
+<a href="bcbk.html" target="_blank">
+					<abbr title="bcbk.html" style="text-decoration:none">
+						别踩白块
+					</abbr>
+				</a>
 				<div class="clear">
 				</div>
 			</div>
