--- a/index.html
+++ b/index.html
@@ -385,6 +385,7 @@
 		</div>
 		
 		<div id="gitalk-container"></div>
+<script>
 var gitalk = new Gitalk({
   clientID: '238e3ee587a50c618e76',
   clientSecret: 'd39e024cf398d98bef97a8f1c1bdf89b795261e5',
@@ -396,7 +397,7 @@ var gitalk = new Gitalk({
 })
 
 gitalk.render('gitalk-container')
-
+</script>
 		<script src="js/weather.js"></script>
 		<script src="js/timeclock.js"></script>
 	</body>
