--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 var gitalk = new Gitalk({
   clientID: '238e3ee587a50c618e76',
   clientSecret: 'd39e024cf398d98bef97a8f1c1bdf89b795261e5',
-  repo: 'make comments',
+  repo: 'comment',
   owner: 'David2013777',
   admin: ['David2013777'],
   id: location.href,      // Ensure uniqueness and length less than 50
