--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 	<head>
@@ -44,8 +42,22 @@
 
 		<!-- 走马灯 -->
 		<marquee>
+			<div id="djt" style="font-size: 20px;">毒鸡汤</div>   
+		   </marquee>
+		   <script>
+			   var xmlhttp = new XMLHttpRequest();
+			   xmlhttp.onreadystatechange = function() {
+				   if (this.readyState == 4 && this.status == 200) {
+					   
+					   document.getElementById("djt").innerHTML = '毒鸡汤：'+this.responseText;
+				   }
+			   };
+			   xmlhttp.open("GET", "https://api.btstu.cn/yan/api.php", true);
+			   xmlhttp.send();
+		   </script> 
+		<!-- <marquee>
 			<img src="https://v1.jinrishici.com/all.svg">
-		</marquee>
+		</marquee> -->
 		
 		<!--搜索区域 链接区域 图片 历史上的今天 -->
 		<div style="max-width:1000px; margin:10px auto;..">
@@ -348,21 +360,13 @@
 				</div>
 			</div>
 
-
-
+			<img src="https://api.sunweihu.com/api/bing1/api.php" width="1000px"/>
+			<iframe src="https://www.ipip5.com/today/" id="iframepage" frameborder=1 width="1000px" height="500px" scrolling="yes"  style=" overflow-x:scroll; overflow-y:hidden " ></iframe>
 			
 			
 		</div>
 
 
-		<div style="max-width:1000px; margin:10px auto;..">
-		
-		<center>
-			<img src="https://api.sunweihu.com/api/bing1/api.php" height="300px"/>
-			<iframe src="https://www.ipip5.com/today/" id="iframepage" frameborder=1 height="300px" scrolling="yes"  style=" overflow-x:scroll; overflow-y:hidden " ></iframe>	
-		</center>
-		
-		</div>
 		<!--底部的诗词区域-->
 		<div style="background-color:rgb(44, 183, 218); color:white; clear:both; text-align:center;padding:5px;">
 			<script src="js/jrsc.js" charset="utf-8"></script>
@@ -401,9 +405,9 @@
 			
 		</div>
 
+		<div style="background-color:rgb(44, 183, 218); color:white; clear:both; text-align:center;padding:5px;">
+			下面什么都没有了:)
+		</div>
+
 	</body>
 </html>
-
-	
-
-	
