--- a/index.html
+++ b/index.html
@@ -360,9 +360,9 @@
 				</div>
 			</div>
 
-			<img src="https://api.sunweihu.com/api/bing1/api.php" width="1000px"/>
+			<!-- <img src="https://api.sunweihu.com/api/bing1/api.php" width="1000px"/>
 			<iframe src="https://www.ipip5.com/today/" id="iframepage" frameborder=1 width="1000px" height="500px" scrolling="yes"  style=" overflow-x:scroll; overflow-y:hidden " ></iframe>
-			
+			-->
 			
 		</div>
 
