--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 		</div>
 	</div>
 
-	<!-- <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-	<script src="js/main.js"></script> -->
+	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+	<script src="js/main.js"></script>
 </body>
 
 </html>
