--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<script>
 		Bmob.initialize("c010cfb4b7e57afa", "985211");
-		Bmob.debug(true);
+		//Bmob.debug(true);
 		function register(){
 			let name = document.getElementById("username").value;
 			let pwd = document.getElementById("pwd").value;
