--- a/test.html
+++ b/test.html
@@ -7,7 +7,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=0.5">
 
 		<title>网址导航</title>
-
+<script src="js/Bmob-2.2.4.min.js"></script>
+<script>
+Bmob.initialize("c010cfb4b7e57afa", "985211");
+</script>
 		<link rel="icon" href="123.jpg" sizes="16x16">
 		<link rel="stylesheet" href="css/index.css">
 
