--- a/index.html
+++ b/index.html
@@ -18,7 +18,48 @@
 	<!--评论功能需要-->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
 	<script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
+	<style>
+		.boxup{
+		position:fixed;
+		right:10px;
+		bottom: 10px;
+		height:50px;
+		width: 50px;    
+		text-align:center;
+		padding-top:20px;    
+		/* background-color: white; */
+		border-radius: 20%;
+		overflow: hidden;
+	}
+	.boxup:hover:before{
+		top:50%
+	}
+	.boxup:hover .boxup-in{
+		visibility: hidden;
+	}
+	.boxup:before{
+		position: absolute;
+		top: -50%;
+		left: 50%;
+		transform: translate(-50%,-50%);
+		content:'回到顶部';
+		width: 40px;
+		color:black;
+		font-weight:bold;
+	
+	}    
+	.boxup-in{
+		visibility: visible;
+		display:inline-block;
+		height:20px;
+		width: 20px;
+		border: 3px solid /*white*/;
+		border-color: black transparent transparent black;
+		transform:rotate(45deg);
+	}
+	</style>
 
+	
 	</head>
 	<body background="images/background7.jfif" >
 		<!--置顶的地球，天气功能-->
@@ -104,7 +145,7 @@
 				});
 			</script> -->
             <!-- 走马灯 -->
-		<marquee>
+			<marquee>
 			<div id="djt" style="font-size: 20px;">毒鸡汤</div>   
 		   </marquee>
 		   <script>
@@ -256,7 +297,7 @@
 				</a>
 				<a href="https://acm.nankai.edu.cn/nkcoj/course.php" target="_blank">
 					<abbr title="https://acm.nankai.edu.cn/nkcoj/course.php" style="text-decoration:none">
-						南开计算机课程列表
+						南开计算机课程
 					</abbr>
 				</a>
 				<a href="https://webvpn.nankai.edu.cn/" target="_blank">
@@ -369,6 +410,21 @@
 						我的音乐
 					</abbr>
 				</a>
+				<a href="https://v.qq.com/" target="_blank">
+					<abbr title="https://v.qq.com/" style="text-decoration:none">
+						腾讯视频
+					</abbr>
+				</a>
+				<a href="https://v.iqiyi.com/" target="_blank">
+					<abbr title="https://v.iqiyi.com/" style="text-decoration:none">
+						爱奇艺视频
+					</abbr>
+				</a>
+				<a href="https://www.youku.com/" target="_blank">
+					<abbr title="https://www.youku.com/" style="text-decoration:none">
+						优酷视频
+					</abbr>
+				</a>
                 <a href="2048.html" target="_blank">
 					<abbr title="2048.html" style="text-decoration:none">
 						2048
@@ -379,6 +435,7 @@
 						别踩白块
 					</abbr>
 				</a>
+
 				<div class="clear">
 				</div>
 			</div>
@@ -420,7 +477,7 @@
               owner: 'David2013777',
               admin: ['David2013777'],
               id: location.href,      // Ensure uniqueness and length less than 50
-              distractionFreeMode: false  // Facebook-like distraction free mode
+              distractionFreeMode: true  // Facebook-like distraction free mode
             })
             
             gitalk.render('gitalk-container')
@@ -431,6 +488,29 @@
 		<div style="color:black; clear:both; text-align:center;padding:5px; font-size: 20px;">
 			下面什么都没有了:)
 		</div>
+		<div id="boxup" class="boxup">
+			<div class="boxup-in"></div>
+		</div>    
+		<script>
+		var timer  = null;
+		boxup.onclick = function(){
+			cancelAnimationFrame(timer);
+			//获取当前毫秒数
+			var startTime = +new Date();     
+			//获取当前页面的滚动高度
+			var b = document.body.scrollTop || document.documentElement.scrollTop;
+			var d = 500;
+			var c = b;
+			timer = requestAnimationFrame(function func(){
+				var t = d - Math.max(0,startTime - (+new Date()) + d);
+				document.documentElement.scrollTop = document.body.scrollTop = t * (-c) / d + b;
+				timer = requestAnimationFrame(func);
+				if(t == d){
+				  cancelAnimationFrame(timer);
+				}
+			});
+		}
+		</script>
 
 	</body>
 </html>
