--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 	<head>
@@ -171,24 +170,14 @@
 						百度
 					</abbr>
 				</a>
+				<a href="https://cn.bing.com/?mkt=zh-CN" target="_blank">
+					<abbr title="https://cn.bing.com/?mkt=zh-CN" style="text-decoration:none">
+						必应
+					</abbr>
+				</a>
 				<a href="https://fanyi.baidu.com/" target="_blank">
 					<abbr title="https://fanyi.baidu.com/" style="text-decoration:none">
 						百度翻译
-					</abbr>
-				</a>
-				<a href="https://mathf.itewqq.cn/" target="_blank">
-					<abbr title="https://mathf.itewqq.cn/" style="text-decoration:none">
-						图片转公式
-					</abbr>
-				</a>
-				<a href="https://webdemo.myscript.com/views/math/index.html" target="_blank">
-					<abbr title="https://webdemo.myscript.com/views/math/index.html" style="text-decoration:none">
-						手写转公式
-					</abbr>
-				</a>
-				<a href="https://johnmacfarlane.net/texmath" target="_blank">
-					<abbr title="https://johnmacfarlane.net/texmath" style="text-decoration:none">
-						公式互转
 					</abbr>
 				</a>
 				<a href="https://www.wolframalpha.com/" target="_blank">
@@ -201,6 +190,11 @@
 						鸠摩搜索
 					</abbr>
 				</a>
+				<a href="https://www.wanweibaike.com/" target="_blank">
+					<abbr title="https://www.wanweibaike.com/" style="text-decoration:none">
+						万维百科
+					</abbr>
+				</a>
 				<a href="https://www.dute.org/" target="_blank">
 					<abbr title="https://www.dute.org/" style="text-decoration:none">
 						独特工具箱
@@ -209,47 +203,6 @@
 				<a href="https://web.woobx.cn/" target="_blank">
 					<abbr title="https://web.woobx.cn/" style="text-decoration:none">
 						一个木函工具箱
-					</abbr>
-				</a>
-				<a href="https://www.sciclass.cn/python" target="_blank">
-					<abbr title="https://www.sciclass.cn/python" style="text-decoration:none">
-						Python在线编程
-					</abbr>
-				</a>
-				<a href="https://www.w3school.com.cn/tiy/t.asp?f=jsrf_array_for_in" target="_blank">
-					<abbr title="https://www.w3school.com.cn/tiy/t.asp?f=jsrf_array_for_in"
-					style="text-decoration:none">
-						W3school
-					</abbr>
-				</a>
-				<a href="https://www.wanweibaike.com/" target="_blank">
-					<abbr title="https://www.wanweibaike.com/" style="text-decoration:none">
-						万维百科
-					</abbr>
-				</a>
-				<a href="https://app.xunjiepdf.com/mp32wav/" target="_blank">
-					<abbr title="https://app.xunjiepdf.com/mp32wav/" style="text-decoration:none">
-						格式转换器
-					</abbr>
-				</a>
-				<a href="https://pandao.github.io/editor.md/" target="_blank">
-					<abbr title="https://pandao.github.io/editor.md/" style="text-decoration:none">
-						Markdown编辑
-					</abbr>
-				</a>
-				<a href="https://www.remove.bg/zh" target="_blank">
-					<abbr title="https://www.remove.bg/zh" style="text-decoration:none">
-						图片去背景
-					</abbr>
-				</a>
-				<a href="https://docsmall.com/image-compress" target="_blank">
-					<abbr title="https://docsmall.com/image-compress" style="text-decoration:none">
-						图片压缩
-					</abbr>
-				</a>
-				<a href="https://wandbox.org/" target="_blank">
-					<abbr title="https://wandbox.org/" style="text-decoration:none">
-						Wandbox
 					</abbr>
 				</a>
 				<div class="clear">
@@ -297,12 +250,17 @@
 				</a>
 				<a href="https://acm.nankai.edu.cn/nkcoj/course.php" target="_blank">
 					<abbr title="https://acm.nankai.edu.cn/nkcoj/course.php" style="text-decoration:none">
-						南开计算机课程
+						计算机课程
 					</abbr>
 				</a>
 				<a href="https://webvpn.nankai.edu.cn/" target="_blank">
 					<abbr title="https://webvpn.nankai.edu.cn/" style="text-decoration:none">
-						南开大学VPN登录
+						VPN登录
+					</abbr>
+				</a>
+				<a href="http://www.lib.nankai.edu.cn/" target="_blank">
+					<abbr title="http://www.lib.nankai.edu.cn/" style="text-decoration:none">
+						图书馆
 					</abbr>
 				</a>
 				<div class="clear">
@@ -311,6 +269,47 @@
 			<div class="nav">
 				<h3>
 					学习
+					<i>
+					</i>
+				</h3>
+				<a href="https://www.zhihu.com/" target="_blank">
+					<abbr title="https://www.zhihu.com/" style="text-decoration:none">
+						知乎
+					</abbr>
+				</a>
+				<a href="http://esl-bits.net/ESL.English.Learning.Audiobooks/ESL.English.Learning.Audiobooks.html"
+				target="_blank">
+					<abbr title="http://esl-bits.net/ESL.English.Learning.Audiobooks/ESL.English.Learning.Audiobooks.html"
+					style="text-decoration:none">
+						ESL
+					</abbr>
+				</a>
+				<a href="https://mathoverflow.net/" target="_blank">
+					<abbr title="https://mathoverflow.net/" style="text-decoration:none">
+						Mathoverflow
+					</abbr>
+				</a>
+				<a href="https://weread.qq.com/" target="_blank">
+					<abbr title="https://weread.qq.com/" style="text-decoration:none">
+						微信读书
+					</abbr>
+				</a>
+				<a href="https://www.gushiwen.cn/" target="_blank">
+					<abbr title="https://www.gushiwen.cn/" style="text-decoration:none">
+						古诗文网
+					</abbr>
+				</a>
+				<a href="https://www.allhistory.com/" target="_blank">
+					<abbr title="https://www.allhistory.com/" style="text-decoration:none">
+						全历史
+					</abbr>
+				</a>
+				<div class="clear">
+				</div>
+			</div>
+			<div class="nav">
+				<h3>
+					编程
 					<i>
 					</i>
 				</h3>
@@ -334,23 +333,6 @@
 						洛谷
 					</abbr>
 				</a>
-				<a href="https://www.zhihu.com/" target="_blank">
-					<abbr title="https://www.zhihu.com/" style="text-decoration:none">
-						知乎
-					</abbr>
-				</a>
-				<a href="http://esl-bits.net/ESL.English.Learning.Audiobooks/ESL.English.Learning.Audiobooks.html"
-				target="_blank">
-					<abbr title="http://esl-bits.net/ESL.English.Learning.Audiobooks/ESL.English.Learning.Audiobooks.html"
-					style="text-decoration:none">
-						ESL
-					</abbr>
-				</a>
-				<a href="http://www.lib.nankai.edu.cn/" target="_blank">
-					<abbr title="http://www.lib.nankai.edu.cn/" style="text-decoration:none">
-						南开大学图书馆
-					</abbr>
-				</a>
 				<a href="https://stackoverflow.com/" target="_blank">
 					<abbr title="https://stackoverflow.com/" style="text-decoration:none">
 						Stackoverflow
@@ -361,14 +343,60 @@
 						Stackexchange
 					</abbr>
 				</a>
-				<a href="https://mathoverflow.net/" target="_blank">
-					<abbr title="https://mathoverflow.net/" style="text-decoration:none">
-						Mathoverflow
+				<a href="https://www.sciclass.cn/python" target="_blank">
+					<abbr title="https://www.sciclass.cn/python" style="text-decoration:none">
+						Python在线编程
 					</abbr>
 				</a>
-				<a href="https://weread.qq.com/" target="_blank">
-					<abbr title="https://weread.qq.com/" style="text-decoration:none">
-						微信读书
+				<a href="https://www.compilejava.net/" target="_blank">
+					<abbr title="https://www.compilejava.net/" style="text-decoration:none">
+						Java在线编程
+					</abbr>
+				</a>
+				<a href="https://www.w3school.com.cn/tiy/t.asp?f=jsrf_array_for_in" target="_blank">
+					<abbr title="https://www.w3school.com.cn/tiy/t.asp?f=jsrf_array_for_in"
+					style="text-decoration:none">
+						W3school
+					</abbr>
+				</a>
+				<a href="https://app.xunjiepdf.com/mp32wav/" target="_blank">
+					<abbr title="https://app.xunjiepdf.com/mp32wav/" style="text-decoration:none">
+						格式转换器
+					</abbr>
+				</a>
+				<a href="https://pandao.github.io/editor.md/" target="_blank">
+					<abbr title="https://pandao.github.io/editor.md/" style="text-decoration:none">
+						Markdown编辑
+					</abbr>
+				</a>
+				<a href="https://www.remove.bg/zh" target="_blank">
+					<abbr title="https://www.remove.bg/zh" style="text-decoration:none">
+						图片去背景
+					</abbr>
+				</a>
+				<a href="https://docsmall.com/image-compress" target="_blank">
+					<abbr title="https://docsmall.com/image-compress" style="text-decoration:none">
+						图片压缩
+					</abbr>
+				</a>
+				<a href="https://mathf.itewqq.cn/" target="_blank">
+					<abbr title="https://mathf.itewqq.cn/" style="text-decoration:none">
+						图片转公式
+					</abbr>
+				</a>
+				<a href="https://webdemo.myscript.com/views/math/index.html" target="_blank">
+					<abbr title="https://webdemo.myscript.com/views/math/index.html" style="text-decoration:none">
+						手写转公式
+					</abbr>
+				</a>
+				<a href="https://johnmacfarlane.net/texmath" target="_blank">
+					<abbr title="https://johnmacfarlane.net/texmath" style="text-decoration:none">
+						公式互转
+					</abbr>
+				</a>
+				<a href="https://wandbox.org/" target="_blank">
+					<abbr title="https://wandbox.org/" style="text-decoration:none">
+						Wandbox
 					</abbr>
 				</a>
 				<div class="clear">
@@ -467,7 +495,9 @@
 		<script src="js/weather.js"></script>
 		<script src="js/timeclock.js"></script>
 		<!-- 评论功能 -->
+
 		<div style="max-width:1000px; margin:10px auto;..">
+			<div id="commenttitle" onclick="onTileClick()" style="font-size: 20px;">评论---点击此处可隐藏</div>
 			<div id="gitalk-container"></div>
             <script>
             var gitalk = new Gitalk({
@@ -482,6 +512,23 @@
             
             gitalk.render('gitalk-container')
             </script>
+			
+			<script type="text/javascript">
+				var content = document.getElementById("gitalk-container");
+				function onTileClick() 
+				{
+					if(content.style.display!="none")
+					{
+						content.style.display="none"
+						document.getElementById("commenttitle").innerHTML="评论---点击此处可显示"
+					}
+					else
+					{
+						content.style.display="block"
+						document.getElementById("commenttitle").innerHTML="评论---点击此处可隐藏"
+					}
+				}
+			</script>
 			
 		</div>
 
