--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 		<!-- 评论功能 -->
 
 		<div style="max-width:1000px; margin:10px auto;..">
-			<div id="commenttitle" onclick="onTileClick()" style="font-size: 20px;">评论---点击此处可隐藏</div>
+			<div id="commenttitle" onclick="onTileClick()" style="font-size: 30px;font-family:'楷体'; text-align: center;">评论---点击此处可隐藏</div>
 			<div id="gitalk-container"></div>
             <script>
             var gitalk = new Gitalk({
