--- a/index.html
+++ b/index.html
@@ -500,9 +500,9 @@
 			<div style="text-align: left; font-size: 25px;font-family: '黑体';">每日一文</div>
 			<div id="doctitle" style="text-align: center; font-size: 30px;font-family: '黑体';"></div>
 			<div id="docauthor" style="text-align: center; font-size: 20px;font-family: '宋体';"></div>
-			<div id="docdigest" style="display: block;font-size: 20px;font-family: '楷体';"></div>
+			<div id="docdigest" style="padding:20px;display: block;font-size: 20px;font-family: '楷体';"></div>
 			<div id="seeall"  onclick="onDocClick1()" style="display: block;text-align: center; font-size: 30px;font-family: '黑体';">查看全文</div>
-			<div id="doccontent" style="display: none;font-size: 20px;font-family: '楷体';"></div>
+			<div id="doccontent" style="padding:20px;display: none;font-size: 20px;font-family: '楷体';"></div>
 			<div id="hideall" onclick="onDocClick2()" style="display: none;text-align: center; font-size: 30px;font-family: '黑体';">收起全文</div>
 			<script>
 				var xmlhttp = new XMLHttpRequest();
