--- a/index.html
+++ b/index.html
@@ -583,8 +583,8 @@
 
 		<!-- 英文名言 -->
 		<div style="max-width:1000px; margin:10px auto;..">
-			<div id="quobody" style="text-align: left;font-size: 20px;font-family: 'Times New Roman', Times, serif;"></div>
-  			<div id="quoauthor" style="text-align: right;"></div>
+			<div id="quobody" style="padding:20px;text-align: left;font-size: 20px;font-family: 'Times New Roman', Times, serif;"></div>
+  			<div id="quoauthor" style="padding:20px;text-align: right;"></div>
 			<script>
 				var xmlhttp = new XMLHttpRequest();
 				xmlhttp.onreadystatechange = function() {
