--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -597,6 +598,13 @@
 				xmlhttp.open("GET", "https://favqs.com/api/qotd", true);
 				xmlhttp.send();
 			</script>
+		</div>
+
+		<div style="max-width:1000px; margin:10px auto;..">
+			<center>
+			<img src="https://api.ooomn.com/api/ipcard"/>	
+			</center>
+			
 		</div>
 
 		<!-- 底部 -->
