--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
 						document.getElementById("doccontent").innerHTML =myObj.data.content;
 					}
 				};
-				xmlhttp.open("GET", "https://interface.meiriyiwen.com/article/today?dev=1", true);
+				xmlhttp.open("GET", "https://interface.meiriyiwen.com/article/random?dev=1", true);
 				xmlhttp.send();
 			</script>
 			<script>
@@ -602,7 +602,8 @@
 
 		<div style="max-width:1000px; margin:10px auto;..">
 			<center>
-			<img src="https://api.ooomn.com/api/ipcard"/>	
+			<img src="https://api.ooomn.com/api/ipcard" width="980px"/>
+				
 			</center>
 			
 		</div>
