--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
 
 		<div style="max-width:1000px; margin:10px auto;..">
 			<center>
-			<img src="https://api.ooomn.com/api/ipcard" width="980px"/>
+			<img src="https://api.ooomn.com/api/ipcard"/>
 				
 			</center>
 			
