--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
 		<div id="boxup" class="boxup">
 			<div class="boxup-in"></div>
 		</div>
-<script type="text/javascript" src="//rf.revolvermaps.com/0/0/6.js?i=5bart02kbz6&amp;m=2&amp;c=ff0000&amp;cr1=ffffff&amp;f=palatino_linotype&amp;l=0" async="async"></script>
+<script type="text/javascript" src="https://rf.revolvermaps.com/0/0/6.js?i=5bart02kbz6&amp;m=2&amp;c=ff0000&amp;cr1=ffffff&amp;f=palatino_linotype&amp;l=0" async="async"></script>
 		<script>
 		var timer  = null;
 		boxup.onclick = function(){
