--- a/mymusic.html
+++ b/mymusic.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div>
-    <div id="player" style="padding:200px"></div>
+    <div id="player"></div>
     <script src="js/APlayer.min.js"></script>
     <script src="js/mymusiclist.js"></script>
 
